--- a/src/App.css
+++ b/src/App.css
@@ -8,13 +8,13 @@ body {
   flex-direction: column;
   align-items: center;
 }
-button {
+/*button {
   font-size: 2em;
   border: 0;
   padding: 0;
   background: none;
   cursor: pointer;
-}
+}*/
 /*
 ul {
   display: block;
