--- a/src/App.css
+++ b/src/App.css
@@ -7,19 +7,8 @@ body {
   display: flex;
   flex-direction: column;
   align-items: center;
+  padding: 50px;
 }
-/*button {
-  font-size: 2em;
-  border: 0;
-  padding: 0;
-  background: none;
-  cursor: pointer;
-}*/
-/*
-ul {
-  display: block;
-  padding: 0;
-}*/
 
 li {
   margin: 0 20px;
@@ -38,3 +27,4 @@ p {
   display: flex;
   padding: 0;
 }
+
